# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.83 2005/03/17 06:12:15 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  16 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Modified GLIUtility.exitsuccess() to work with return value from
  commands.getstatusoutput instead of os.waitpid(). spawn() automatically
  creates wrapper script for commands run inside chroot so multiple commands
  and redirection can be used. Change exitsuccess() back

  16 Mar 2005; Preston Cody <codeman@gentoo.org>
  Removed default values for stage tarball URI and portage tree URI from
  InstallProfile.  These should be set by the FEs.  also added services step to
  ArchTemplate and coldplug/hotplug runlevels to the genkernel step.
  Possibly fixed CC DHCP bug with -n. (thx agaffney)

  14 Mar 2005; Preston Cody <codeman@gentoo.org>
  Small fix for setting the default gateway.  Also added feature to dialogfe.
  
  7 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Switched spawn() over to commands.getstatusoutput() instead of fork/waitpid

  1 Mar 2005; Preston Cody <codeman@gentoo.org>
  Fixed a bunch of true -> True typos. lots of em
  only write new resolv.conf if there are dns servers listed.
  
  1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Commented out 'display_on_tty8=True' in start_portmap()

  18 Feb 2005; Preston Cody <codeman@gentoo.org>
  added progress bar to dialogfe and fix logger bug in ArchTemplate.
  
  18 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Created GLISayWhat module. Renamed GLISayWhat to GLILocalization. Moved
  lang parameter to __init__()
  
  10 Feb 2005; Preston Cody <codeman@gentoo.org>
  updates to TODO list.

  6 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  Initial code for quickpkg GRP support. Fix loop to grab packages from
  'emerge -p blah'

  6 Feb 2005; Preston Cody <codeman@gentoo.org>
  check for dhcp in the network stuff and emerge it if it is.