@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.83 2005/03/17 06:12:15 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.84 2005/03/17 06:52:55 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
@@ -8,7 +8,8 @@
   Modified GLIUtility.exitsuccess() to work with return value from
   commands.getstatusoutput instead of os.waitpid(). spawn() automatically
   creates wrapper script for commands run inside chroot so multiple commands
-  and redirection can be used. Change exitsuccess() back
+  and redirection can be used. Change exitsuccess() back. Added 'chmod a+x'
+  for the generated script from spawn()
 
   16 Mar 2005; Preston Cody <codeman@gentoo.org>
   Removed default values for stage tarball URI and portage tree URI from
